--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -18,12 +18,12 @@
         </div>
     </div>
     <hr>
-    <div class="col-md-5 col-md-offset-3" *ngIf="errorMessage !== ''">
+    <!-- <div class="col-md-5 col-md-offset-3" *ngIf="errorMessage !== ''">
         <div class="alert alert-dismissible alert-danger">
             <button type="button" class="close" data-dismiss="alert">&times;</button> {{errorMessage }}
         </div>
 
-    </div>
+    </div> -->
     <hr>
 
     <div class="row">
