--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,49 @@
     height: -webkit-calc(100% - 52px);
     height: calc(100% - 52px);
 }
+
+.sn-title {
+    font-size: 15px !important;
+}
+
+.simple-notification .sn-content {
+    font-size: 13px !important;
+}
+
+.simple-notification .icon {
+    position: absolute;
+    box-sizing: border-box;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+}
+
+.simple-notification.error {
+    background: #E74C48 !important;
+}
+
+.simple-notification.success {
+    background: #18bc9c !important;
+}
+
+.simple-notification.alert {
+    background: #ffdb5b;
+}
+
+.simple-notification.info {
+    background: #03A9F4;
+}
+
+.simple-notification.warn {
+    background: #ffdb5b;
+}
+
+.simple-notification.warn div .sn-title {
+    color: #444;
+}
+
+.simple-notification.warn div .sn-content {
+    color: #444;
+}
