--- a/src/app/my-projects/projects/project-item/project-item.component.css
+++ b/src/app/my-projects/projects/project-item/project-item.component.css
@@ -1,32 +1,3 @@
-.list-group-item {
-    border-bottom: solid #174a44 1px;
-    border-left: none;
-    border-top: none;
-    border-right: none;
-    border-radius: 0px;
-    min-height: 100px;
-}
-
-.btn-access,
-.btn-delete,
-.btn-edit {
-    border: none;
-    color: white;
-    font-weight: 300;
-    /* border-radius: 1px; */
-    /* margin: 2px; */
-    /* float: right; */
-    align-self: center;
-}
-
-.btn-delete {
-    background-color: rgba(228, 91, 91, 0.85);
-}
-
-.btn-access {
-    background-color: #669ADA;
-}
-
 .btn-edit {
     background-color: transparent;
     color: grey;
@@ -35,4 +6,8 @@
 
 .col-md-1 {
     display: inline-grid;
+}
+
+.btn {
+    padding: 5px 10px !important;
 }
