--- a/src/app/my-projects/projects/project-item/project-item.component.html
+++ b/src/app/my-projects/projects/project-item/project-item.component.html
@@ -1,19 +1,22 @@
 <td>
     <button type="button" class="btn btn-success" (click)="onAccessProject()">
-        <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> 
+        <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> Acceder
     </button>
-    <button class="btn btn-danger" (click)="onDeleteProject()">
-        <i class="fa fa-trash-o" aria-hidden="true"></i>
-    </button>
-    <button class="btn btn-info" (click)="onShareProject()">
+    <button class="btn btn-info" (click)="onShareProject()" title="Compartir">
         <i class="fa fa-share-alt" aria-hidden="true"></i>
     </button>
 </td>
 <td> {{project.name}}</td>
+<td> {{project.owner}}</td>
 <td>
     <inline-editor type="text" [(ngModel)]="project.description" (onSave)="onUpdateDescription($event)" size=70 min=0 max=300></inline-editor>
     <button class="btn btn-edit" *ngIf="project.description == ''" (click)="this.project.description = 'Ingresa aquí la nueva descripcion'">
         <i class="fa fa-pencil" aria-hidden="true"></i>
     </button>
 
+</td>
+<td>
+    <button class="btn btn-danger" *ngIf="project.owner == myEmail" (click)="onDeleteProject()">
+        <i class="fa fa-trash-o" aria-hidden="true"></i>
+    </button>
 </td>
