--- a/src/app/header/project-share-modal/project-share-modal.component.css
+++ b/src/app/header/project-share-modal/project-share-modal.component.css
@@ -1,20 +1,30 @@
-.code-modal-container {
-    padding: 15px;
+.btn-delete-mail {
+    padding: 1px 5px !important;
+    float: right;
+    border: none;
+    background-color: transparent;
+    color: #da5555;
 }
 
-.code-modal-header {
-    background-color: #219161;
-    color: #fff;
-    -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
-    margin-top: -15px;
-    margin-bottom: 40px;
-    border-radius: 6px;
+
+/* .btn-add-email {
+    padding: 1px 5px !important;
+    border: none;
+    color: #18bc9c;
+    font-weight: bold;
+    background-color: transparent;
+} */
+
+ul {
+    max-height: 200px;
 }
 
-.vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+ul {
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
+.col-md-4 {
+    padding-left: 0px;
+    padding-right: 0px;
 }
