--- a/src/app/header/project-share-modal/project-share-modal.component.html
+++ b/src/app/header/project-share-modal/project-share-modal.component.html
@@ -1,26 +1,38 @@
-<div class="container-fluid code-modal-container">
-    <div class="row code-modal-header">
-        <button type="button" (click)="onClose()" class="close col-xs-1">&times;</button>
-        <div class="col-xs-6 col-md-4">
-            <h4>Compartir proyecto</h4>
-        </div>
+<div class="container-fluid">
+    <div class="modal-header">
+        <button type="button" (click)="onClose()" class="close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <h5 class="modal-title">Compartir proyecto {{project.name}}</h5>
     </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="input-group">
-                <span class="input-group-addon">Código     </span>
-                <!-- <input class="col-xs-12 form-control" type="text" [(ngModel)]="code.name"> -->
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-md-7">
+                <div class="input-group">
+                    <span class="input-group-addon"> <i class="fa fa-envelope-o" aria-hidden="true"></i> </span>
+                    <input #email class="col-xs-6 form-control" type="text" placeholder="Ingrese el email">
+                </div>
             </div>
-            <div class="input-group">
-                <span class="input-group-addon">Descripción</span>
-                <!-- <input class="col-xs-12 form-control" type="text" [(ngModel)]="code.memo"> -->
+            <div class="col-md-4">
+                <div class="input-group">
+                    <select #role class="form-control" style="width: 170px;">
+                            <option> Lector </option>
+                            <option> Lector/Escritor </option>
+                            <option> Co-Owner </option>
+                     </select>
+                </div>
             </div>
+            <button style="margin: 4px 0px;" type="button" class="btn btn-info" (click)="onAddEmail()"> + </button>
         </div>
+        <br>
+        <ul class="list-group">
+            <li class="list-group-item" *ngFor="let col of listCols; let i = index;">
+                {{col.email}}
+                <button type="button" class="btn btn-danger btn-delete-mail" (click)="onRemoveEmail(i)"> <i class="fa fa-times" aria-hidden="true"></i> </button>
+            </li>
+        </ul>
     </div>
-    <hr>
-    <div class="row">
-        <div class="col-xs-12 text-center">
-            <button type="button" class="btn btn-success" (click)="onSaveCollaborators()"> Guardar </button>
-        </div>
+    <div class="modal-footer text-center">
+        <button type="button" class="btn btn-success" (click)="onSaveCollaborators()"> Guardar </button>
     </div>
 </div>
