when code delted remove from quotes

--- a/src/app/header/code-modal/code-modal.component.html
+++ b/src/app/header/code-modal/code-modal.component.html
@@ -8,12 +8,20 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="input-group">
-            <span class="input-group-addon">Código     </span>
-            <input class="col-xs-12 form-control" type="text" [(ngModel)]="name">
+                <span class="input-group-addon">Código     </span>
+                <input class="col-xs-12 form-control" type="text" [(ngModel)]="name">
             </div>
             <div class="input-group">
-            <span class="input-group-addon">Descripción</span>
-            <input class="col-xs-12 form-control" type="text" [(ngModel)]="memo">
+                <span class="input-group-addon">Descripción</span>
+                <input class="col-xs-12 form-control" type="text" [(ngModel)]="memo">
+            </div>
+            <div class="input-group">
+                <span class="input-group-addon">Color</span>
+                <input [(colorPicker)]="color" [cpOKButton]="true" [cpAlphaChannel]="'disabled'"
+                 [style.background]="color" [class]="'colorInput col-xs-12 form-control'" [cpPosition]="'bottom'"
+                 [cpCancelButton]="true" [cpCancelButtonClass]="'btn btn-danger'" 
+                 [cpOKButtonClass]="'btn btn-success'" 
+                 />
             </div>
         </div>
     </div>
