--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -5,10 +5,11 @@
         <table class="page" [id]="p">
           <tbody [id]="p">
           <tr *ngFor="let line of page.getLines(); let l = index" [id]="l">
-            <td *ngFor="let quote of actualDocumentContent.getQuotesDisplay(); let i = index" 
+            <td *ngFor="let quote of colRangeArray; let i = index" 
             [ngClass]="line?.getBracketType(colRange-i-1)" 
             [ngStyle]="{ 'color': line?.getBracketColor(colRange-i-1) }"
             (click)="onOpenQuoteModal(line?.getRelatedQuote(colRange-i-1)?.quote)" 
+            [attr.title]="line?.getBracketTitle(colRange-i-1)"
             >
             </td>
             <td (contextmenu)="onContextMenu($event)"
