--- a/src/app/my-projects/projects/project-item/project-item.component.html
+++ b/src/app/my-projects/projects/project-item/project-item.component.html
@@ -16,7 +16,7 @@
 
 </td>
 <td>
-    <button class="btn btn-danger" *ngIf="project.owner == myEmail" (click)="onDeleteProject()">
+    <button class="btn btn-danger" *ngIf="project.owner.split('@')[0] == myNick" (click)="onDeleteProject()">
         <i class="fa fa-trash-o" aria-hidden="true"></i>
     </button>
 </td>
