--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,14 +6,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">FingQDA</a>
+            <a class="navbar-brand" routerLink='/myprojects'>FingQDA</a>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar" *ngIf="router.url.includes('workspace')">
-            <ul class="nav navbar-nav">
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav" *ngIf="router.url.includes('workspace')">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Proyecto <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a (click)="onShareProject()">Compartir</a></li>
+                        <li><a (click)="onShareProject()" class="header-btn">Compartir</a></li>
                         <li><a href="#">Another action</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
@@ -44,7 +44,7 @@
                 <li><a href="#">Visualización</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a routerLink='/myprojects' *ngIf="this.authsvc.isAuthenticated()"> Mis Proyectos </a></li>
+                <li><a routerLink='/myprojects' *ngIf="this.authsvc.isAuthenticated() && router.url.includes('workspace')"> Mis Proyectos </a></li>
                 <li><a href="#" (click)="logout()" *ngIf="show"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
         </div>
