--- a/src/app/my-projects/project-share-modal/project-share-modal.component.css
+++ b/src/app/my-projects/project-share-modal/project-share-modal.component.css
@@ -6,14 +6,9 @@
     color: #da5555;
 }
 
-
-/* .btn-add-email {
-    padding: 1px 5px !important;
-    border: none;
-    color: #18bc9c;
-    font-weight: bold;
-    background-color: transparent;
-} */
+.btn-add-mail {
+    width: 35px;
+}
 
 ul {
     max-height: 200px;
@@ -24,20 +19,23 @@ ul {
     overflow-y: scroll;
 }
 
-.col-md-4 {
-    padding-left: 0px;
-    padding-right: 0px;
+.col-md-3 {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
+
+input.ng-pristine.ng-untouched.ng-invalid {
+    border-left: 5px solid #15967cd1 !important;
+    border: 2px solid #dce4ec !important;
+    box-shadow: none !important;
 }
 
 .ng-valid[required] {
     border-left: 5px solid #42A948;
-    /* green */
 }
 
 .ng-invalid {
-    border-left: 5px solid #a94442 !important;
-    /* red */
-    border-color: #a94442 !important;
-    /* red */
+    border-left: 5px solid #a94442d7 !important;
+    border-color: #7c3131a1 !important;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(169, 68, 66, .6) !important;
 }
