remove code form multiple page quote bug fixed

--- a/src/app/header/code-modal/code-modal.component.html
+++ b/src/app/header/code-modal/code-modal.component.html
@@ -19,8 +19,8 @@
                 <span class="input-group-addon">Color</span>
                 <input [(colorPicker)]="color" [cpOKButton]="true" [cpAlphaChannel]="'disabled'"
                  [style.background]="color" [class]="'colorInput col-xs-12 form-control'" [cpPosition]="'bottom'"
-                 [cpCancelButton]="true" [cpCancelButtonClass]="'btn btn-danger'" 
-                 [cpOKButtonClass]="'btn btn-success'" 
+                 [cpCancelButton]="true" [cpCancelButtonClass]="'btn btn-danger'"
+                 [cpOKButtonClass]="'btn btn-success'" [cpPositionOffset]="'-60%'"
                  />
             </div>
         </div>
