--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -79,6 +79,9 @@
                                 <th style="width: 40%">
                                     <mfDefaultSorter by="description" style="font-weight:400">Descripcion</mfDefaultSorter>
                                 </th>
+                                <th style="width: 40%">
+                                    <mfDefaultSorter by="_updated" style="font-weight:400">Ultima actualizacion</mfDefaultSorter>
+                                </th>
                                 <th style="width: 5%">
                                 </th>
                             </tr>
