--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -80,7 +80,7 @@
                                     <mfDefaultSorter by="description" style="font-weight:400">Descripcion</mfDefaultSorter>
                                 </th>
                                 <th style="width: 40%">
-                                    <mfDefaultSorter by="_updated" style="font-weight:400">Ultima actualizacion</mfDefaultSorter>
+                                    <mfDefaultSorter by="_modified" style="font-weight:400">Ultima actualizacion</mfDefaultSorter>
                                 </th>
                                 <th style="width: 5%">
                                 </th>
