--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -57,5 +57,6 @@
 :host /deep/ .simple-notification-wrapper {
     height: 20px;
     width: 420px !important;
-    top: 100px !important;
+    top: 70px !important;
+    z-index: 2000 !important;
 }
