--- a/src/app/my-projects/projects/project-item/project-item.component.html
+++ b/src/app/my-projects/projects/project-item/project-item.component.html
@@ -1,22 +1,7 @@
-<td>
-    <button type="button" class="btn btn-success" (click)="onAccessProject()">
-        <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> Acceder
-    </button>
-    <button class="btn btn-info" (click)="onShareProject()" title="Compartir">
-        <i class="fa fa-share-alt" aria-hidden="true"></i>
-    </button>
-</td>
-<td> {{project.name}}</td>
+<td (click)='onSelectedProject()' (dblclick)="onAccessProject()" (mouseover)="hover=true" (mouseleave)="hover=false" [ngClass]="{'lbl-hover': hover}"> {{project.name}}</td>
 <td> {{project.owner}}</td>
-<td>
-    <inline-editor type="text" [(ngModel)]="project.description" (onSave)="onUpdateDescription($event)" size=70 min=0 max=300></inline-editor>
-    <button class="btn btn-edit" *ngIf="project.description == ''" (click)="this.project.description = 'Ingresa aquí la nueva descripcion'">
-        <i class="fa fa-pencil" aria-hidden="true"></i>
-
-    </button>
-
-</td>
-<td> {{ project._modified | date:'dd-MM-yyyy' }} <br> {{ project._modified | date:'HH:mm' }} hs {{ project._modified_by}} </td>
+<td> {{ project._modified }} hs </td>
+<!-- <td> {{ project._modified | date:'dd/MM/yyyy - HH:mm' }} hs </td> -->
 <td>
     <button class="btn btn-danger" *ngIf="project.owner.split('@')[0] == myNick" (click)="onDeleteProject()">
         <i class="fa fa-trash-o" aria-hidden="true"></i>
