--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -1,105 +1,96 @@
-<div class="col-md-12">
-    <h2> Proyectos </h2>
+<div class="col-md-8">
     <br>
-    <div class="col-md-12">
+    <div class="row">
         <div class="col-md-4">
-            <input #nameProject type="text" class="form-control" [ngClass]="{ 'border-red': error }" placeholder="Ingresa el nombre del nuevo proyecto">
+            <input #nameProject type="text" class="form-control" placeholder="Ingresa el nombre del nuevo proyecto">
         </div>
         <div class="col-md-6">
-            <input #descProject type="text" class="form-control" [ngClass]="{ 'border-red': error }" placeholder="Ingresa la descripcion">
+            <input #descProject type="text" class="form-control" placeholder="Ingresa la descripción">
         </div>
-        <div class="col-md-2">
-            <span class="input-group-btn">
-                <button class="btn btn-success" id="crearProyecto" type="button" (click)="onCreateProject()"> 
-                    <i class="fa fa-plus" aria-hidden="true"></i> 
-                    Crear Proyecto
-                </button>
-            </span>
-        </div>
-    </div>
-    <hr>
-    <hr>
 
+        <span class="input-group-btn">
+            <button class="btn btn-success" type="button" (click)="onCreateProject()"> 
+                <i class="fa fa-plus" aria-hidden="true"></i> 
+                Crear Proyecto
+            </button>
+        </span>
+        <br>
+    </div>
     <div class="row">
         <!-- TABLA DE MIS PROYECTOS -->
         <div class="container-fluid">
-            <div class="col-md-12">
-
-                <div class="row">
-                    <h3 class="col-xs-6">Proyectos</h3>
-                    <div class="col-xs-2">
-                        <label class="label-control">Mostrar</label>
-                        <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+            <div class="row">
+                <h3 class="col-xs-6">Tus proyectos</h3>
+                <div class="col-xs-2">
+                    <label class="label-control">Mostrar</label>
+                    <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
                         <option [ngValue]="5">5</option>
                         <option [ngValue]="10">10</option>
                         <option [ngValue]="15">15</option>
                     </select>
+                </div>
+                <div class="col-xs-4">
+                    <div class="row">
+                        <label class="col-xs-12 label-control">Ordenar por</label>
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-6">
                         <div class="row">
-                            <label class="col-xs-12 label-control">Ordenar por</label>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="row">
-                                <select class="form-control input-sm" [(ngModel)]="sortBy">
+                            <select class="form-control input-sm" [(ngModel)]="sortBy">
                                 <option ngValue="name">Nombre</option>
-                                <option ngValue="description">Descripcion</option>
+                                <option ngValue="_modified">Ultima actualización</option>
                             </select>
-                            </div>
                         </div>
-                        <div class="col-xs-6">
-                            <div class="row">
-                                <select class="form-control input-sm" [(ngModel)]="sortOrder">
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortOrder">
                                         <option ngValue="asc">Ascendente</option>
                                         <option ngValue="desc">Descendente</option>
                                     </select>
-                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
-                    <table class="table table-striped" [mfData]="projects | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
-                        <thead>
-                            <tr>
-                                <th colspan="1">
-                                    Filtro por nombre:
-                                </th>
-                                <th colspan="1">
-                                    <input class="form-control smallinput" [(ngModel)]="filterQuery" />
-                                </th>
-                            </tr>
-                            <tr>
-                                <th style="width: 15%"></th>
-                                <th style="width: 20%">
-                                    <mfDefaultSorter by="name" style="font-weight:400">Nombre</mfDefaultSorter>
-                                </th>
-                                <th style="width: 15%">
-                                    <mfDefaultSorter by="owner" style="font-weight:400">Propietario</mfDefaultSorter>
-                                </th>
-                                <th style="width: 40%">
-                                    <mfDefaultSorter by="description" style="font-weight:400">Descripcion</mfDefaultSorter>
-                                </th>
-                                <th style="width: 40%">
-                                    <mfDefaultSorter by="_modified" style="font-weight:400">Ultima actualizacion</mfDefaultSorter>
-                                </th>
-                                <th style="width: 5%">
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr app-project-item *ngFor="let proj of mf.data" [project]="proj">
-                            </tr>
-                        </tbody>
-                        <tfoot>
-                            <tr>
-                                <td colspan="5">
-                                    <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
-                                </td>
-                            </tr>
-                        </tfoot>
-                    </table>
-                </div>
+            </div>
+            <div class="panel panel-default">
+                <table class="table table-striped" [mfData]="projects | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+                    <thead>
+                        <tr>
+                            <th colspan="1">
+                                Filtro por nombre:
+                            </th>
+                            <th colspan="1">
+                                <input class="form-control smallinput" [(ngModel)]="filterQuery" />
+                            </th>
+                        </tr>
+                        <tr>
+                            <th style="width: 20%">
+                                <mfDefaultSorter by="name" style="font-weight:400">Nombre</mfDefaultSorter>
+                            </th>
+                            <th style="width: 15%">
+                                <mfDefaultSorter by="owner" style="font-weight:400">Propietario</mfDefaultSorter>
+                            </th>
+                            <th style="width: 20%">
+                                <mfDefaultSorter by="_modified" style="font-weight:400">Ultima actualización</mfDefaultSorter>
+                            </th>
+                            <th style="width: 5%">
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr app-project-item *ngFor="let proj of mf.data" [project]="proj">
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="5">
+                                <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
             </div>
         </div>
     </div>
 </div>
+
+<app-project-info></app-project-info>
