--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,2 +1,8 @@
-<footer class="container-fluid text-center footer" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
+<footer class="container-fluid footer" *ngIf="(router.url !== '/') && (router.url !== '/signup') && (router.url.includes('workspace'))">
+    <!-- <div class="col-md-6" *ngIf='project' style="text-align:left">
+        <i class="fa fa-book" aria-hidden="true"></i> {{project.name}}
+    </div>
+    <div class="col-md-6" *ngIf='project' style="text-align:right">
+        <i class="fa fa-clock-o" aria-hidden="true"></i> Ultima modificación: {{project._modified | date:'dd/MM/yyyy - HH:mm:ss' }} hs por {{project._modified_by}}
+    </div> -->
 </footer>
