--- a/src/app/my-projects/projects/project-item/project-item.component.css
+++ b/src/app/my-projects/projects/project-item/project-item.component.css
@@ -1,9 +1,3 @@
-.btn-edit {
-    background-color: transparent;
-    color: grey;
-    float: right;
-}
-
 .col-md-1 {
     display: inline-grid;
 }
@@ -15,4 +9,5 @@
 .lbl-hover {
     background-color: #2c3e50;
     color: white;
+    cursor: pointer;
 }
