--- a/src/app/header/quote-modal/quote-modal.component.html
+++ b/src/app/header/quote-modal/quote-modal.component.html
@@ -12,7 +12,7 @@
                 <div class="col-xs-10">
                         <ng2-completer [(ngModel)]="chosenCode" [datasource]="dataService" 
                         (selected)="onCodeSelected($event)" [textNoResults]="'Enter para crear nuevo código'"
-                        [minSearchLength]="1" inputClass="form-control" inputID="inputCode" [autoMatch]="true"
+                        [minSearchLength]="1" inputClass="form-control" inputID="inputCode"
                         [placeholder]="'Buscar código o crear nuevo'" (keyup)="onKeyUp($event)">
                         </ng2-completer>
                 </div>
