--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -7,7 +7,7 @@
         </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body">
+        <div class="panel-body"  style="overflow:auto; max-height:300px">
             <ul>
                 <app-document-item *ngFor="let doc of documents" [document]="doc"></app-document-item>
             </ul>
