--- a/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
+++ b/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
@@ -1,1 +1,7 @@
-<li><a style="cursor: pointer" (click)="onOpenCode()">{{code.name}}</a></li>
+<li
+  class="list-item"
+  style="cursor: pointer" (click)="onOpenCode()">{{code.name}}
+  <span [ngStyle]="{'color': code.getColor() }">
+    &#9679;
+  </span>
+</li>
