text is selected after quote is created

--- a/src/app/work-space/content/documents/document-content/document-content.component.css
+++ b/src/app/work-space/content/documents/document-content/document-content.component.css
@@ -90,3 +90,10 @@
   s {
     text-decoration-line: unset;
   }
+
+  ::selection {
+    background: #d9cfcf; /* WebKit/Blink Browsers */
+  }
+  ::-moz-selection {
+    background: #d9cfcf; /* Gecko Browsers */
+  }
