--- a/src/app/work-space/side-bar/document-list/document-item/document-item.component.html
+++ b/src/app/work-space/side-bar/document-list/document-item/document-item.component.html
@@ -1,1 +1,4 @@
-<li><span style="cursor: pointer" (click)="onOpenDocument()">{{document.name}}</span></li>
+<li>
+    <div style="cursor: pointer" (click)="onOpenDocument()">{{document.name}}</div>
+    <div> <i class="fa fa-trash" (click)="onDeleteDocument()" aria-hidden="true" style="cursor: pointer"></i> </div>
+</li>
