activating codes and docs

--- a/src/app/work-space/side-bar/code-list/code-item/code-item.component.css
+++ b/src/app/work-space/side-bar/code-list/code-item/code-item.component.css
@@ -5,3 +5,14 @@
 .list-item:hover {
   background-color: #dcdcdc42;
 }
+
+.list-pointer {
+  color: red;
+  padding-right: 3px;
+  font-size: 11px;
+}
+
+.list-marker {
+  font-size: 10px;
+  padding-right: 3px
+}
