--- a/src/app/work-space/side-bar/code-list/code-list.component.html
+++ b/src/app/work-space/side-bar/code-list/code-list.component.html
@@ -10,7 +10,7 @@
     <div id="collapseCodeList" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
         <div class="panel-body">
             <div style="overflow:auto; max-height:200px">
-                    <ul>
+                    <ul class='code-list'>
                         <app-code-item
                         *ngFor="let cod of codes"
                         [code]="cod"></app-code-item>
