--- a/src/app/work-space/side-bar/document-list/document-list.component.html
+++ b/src/app/work-space/side-bar/document-list/document-list.component.html
@@ -8,7 +8,7 @@
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
         <div class="panel-body"  style="overflow:auto;max-height:200px">
-            <ul>
+            <ul class="document-list">
                 <app-document-item *ngFor="let doc of documents" [document]="doc"></app-document-item>
             </ul>
         </div>
