quotes retrieval design

--- a/src/app/work-space/side-bar/code-list/code-item/code-item.component.css
+++ b/src/app/work-space/side-bar/code-list/code-item/code-item.component.css
@@ -2,6 +2,11 @@
   cursor: pointer;
 }
 
+.list-item-selected {
+  color:red;
+  cursor: pointer;
+}
+
 .list-item:hover {
   background-color: #dcdcdc42;
 }
