--- a/src/app/work-space/work-space.component.html
+++ b/src/app/work-space/work-space.component.html
@@ -1,4 +1,5 @@
 <div class="row content">
   <app-side-bar></app-side-bar>
   <app-content></app-content>
+  <app-right-bar></app-right-bar>
 </div>
