quote retrieval visualization

--- a/src/app/work-space/right-bar/right-bar.component.html
+++ b/src/app/work-space/right-bar/right-bar.component.html
@@ -1,10 +1,13 @@
-<div class="col-sm-2 right-bar-heading" role="tab" id="headingOne">
+<div *ngIf="isOpened" class='rightbar-container'>
+  <div class="col-sm-2 right-bar-heading" role="tab" id="headingOne">
     <h4 class="right-bar-title">
-        Citas Recuperadas
+      Citas Recuperadas
     </h4>
-</div>
-<div class="col-sm-2 rightbar" id="mysidenav" [ngClass]="isOpened ? 'opened' : 'closed'">
+    <span class='rightbar-close glyphicon glyphicon-remove' (click)='isOpened=false'></span>
+  </div>
+  <div class="col-sm-2 rightbar" id="mysidenav" [ngClass]="isOpened ? 'opened' : 'closed'">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <app-retrieved-quotes-list></app-retrieved-quotes-list>
+      <app-retrieved-quotes-list></app-retrieved-quotes-list>
     </div>
+  </div>
 </div>
