--- a/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
+++ b/src/app/work-space/side-bar/code-list/code-item/code-item.component.html
@@ -1,10 +1,16 @@
 <li
   (contextmenu)="onContextMenu($event)"
   [ngClass]="getItemClass()"
-  (click)="onOpenCode()">
-  <span *ngIf="code.isActivated()" class="glyphicon glyphicon-arrow-right list-pointer">
+  (dblclick)="onOpenCode()">
+  <span 
+    (click)="onDeactivateCode()"
+    *ngIf="code.isActivated()" class="glyphicon glyphicon-arrow-right list-pointer"
+    >
   </span>
-  <span *ngIf="!code.isActivated()" class="list-marker">
+  <span 
+    *ngIf="!code.isActivated()" class="list-marker"
+    (click)="onActivateCode()"
+    >
     &#9679;
   </span>
   {{code.name}}
