--- a/src/app/work-space/right-bar/retrieved-quotes-list/retrieved-quotes-list.component.html
+++ b/src/app/work-space/right-bar/retrieved-quotes-list/retrieved-quotes-list.component.html
@@ -1,5 +1,5 @@
-<div class="panel panel-default" style="max-height:300px">
-    <ul>
+<div class="" style="max-height:300px">
+    <ul class='retrieved-quotes-list'>
        <app-retrieved-quote-item *ngFor="let quote of retrievedQuotes" [retrievedQuote]="quote"></app-retrieved-quote-item>
     </ul>
 </div>
