--- a/src/app/work-space/right-bar/right-bar.component.css
+++ b/src/app/work-space/right-bar/right-bar.component.css
@@ -1,43 +1,51 @@
-@media screen and (min-width: 1200px) {
-  .rightbar {
-    padding: 2px;
-    padding-top: 20px;
-    background-color: #333534;
-    height: -moz-calc(100vh - 52px);
-    height: -webkit-calc(100vh - 52px - 25px);
-    height: calc(100vh - 52px);
-    width: 20%;
+@media screen and (min-width: 992px) {
+  .rightbar-container {
     position: absolute;
     right: 0;
-    margin-top: 25px;
+    border-left: solid 1px darkgrey;
+    width: 30%;
+    height: -moz-calc(100vh - 52px - 25px);
+    height: -webkit-calc(100vh - 52px - 25px);
+    height: calc(100vh - 52px - 25px);
   }
 }
 
-@media screen and (min-width: 992px) {
-  .rightbar {
-    padding: 2px;
-    padding-top: 30px;
-    background-color: #333534;
-    height: -moz-calc(100vh - 52px - 25px);
-    height: -webkit-calc(100vh - 52px - 25px);
-    height: calc(100vh - 52px);
-    width: 20%;
-    position: absolute;
-    right: 0;
-    margin-top: 25px;
-  }
+.rightbar {
+  padding: 2px;
+  background-color: white;
+  height: -moz-calc(100vh - 52px - 25px);
+  height: -webkit-calc(100vh - 52px - 25px);
+  height: calc(100vh - 52px - 25px);
+  width: 100%;
+  margin-top: 25px;
+  overflow-y: scroll;
 }
 
 .right-bar-heading {
-  background-color: #ecf0f1;
+  background-color: #e8e8e8;
   color: #333534;
   position: absolute;
   right: 0;
-  width: 20%;
+  width: 100%;
   height: 25px;
 }
+
 
 .right-bar-title {
   margin-top: 2px;
   font-size: 18px
 }
+
+.rightbar-actions {
+  position: absolute;
+  right: 0;
+}
+
+.rightbar-close {
+  position: absolute;
+  right: 0;
+  padding: 2px;
+  color: #9d9f9e;
+}
+
+
