--- a/src/app/work-space/side-bar/document-list/document-item/document-item.component.css
+++ b/src/app/work-space/side-bar/document-list/document-item/document-item.component.css
@@ -11,6 +11,10 @@
   background-color: #dcdcdc42;
 }
 
+.list-item-selected:hover {
+  background-color: #dcdcdc42;
+}
+
 .list-pointer {
   color: red;
   padding-right: 3px;
